--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 ; ============================================================
 ; RDP Call Recorder Agent — Конфигурация
-; Версия: 2.0
+; Версия: 2.3
 ; ============================================================
 ; Этот файл должен лежать рядом с RDPCallRecorder.exe
 ; Все параметры имеют значения по умолчанию.
@@ -8,7 +8,9 @@
 [Recording]
 ; Путь для сохранения записей.
 ; Структура: {RecordingPath}\{Username}\{YYYY-MM-DD}\{Дата}_{Юзер}_{Приложение}_{Время}.mp3
-RecordingPath=D:\CallRecordings
+; Путь по умолчанию: %USERPROFILE%\CallRecordings
+; Оставьте пустым для автоопределения, или укажите свой путь
+RecordingPath=
 
 ; Формат записи: mp3, wav
 AudioFormat=mp3
