--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,8 @@
 
 [Recording]
 ; Путь для сохранения записей.
-; Структура: {RecordingPath}\{Username}\{YYYY-MM-DD}\{Дата}_{Юзер}_{Приложение}_{Время}.mp3
+; Структура: {RecordingPath}\{ПолноеИмя}\{YYYY-MM-DD}\{Дата}_{ПолноеИмя}_{Приложение}_{Время}.mp3
+; ПолноеИмя берётся из профиля Windows (например: Nicole, Vladislav AFF)
 ; Путь по умолчанию: %USERPROFILE%\CallRecordings
 ; Оставьте пустым для автоопределения, или укажите свой путь
 RecordingPath=
