--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 ; ============================================================
 ; RDP Call Recorder Agent — Конфигурация
-; Версия: 2.3
+; Версия: 2.4
 ; ============================================================
 ; Этот файл должен лежать рядом с RDPCallRecorder.exe
 ; Все параметры имеют значения по умолчанию.
@@ -26,6 +26,12 @@ PollInterval=2
 ; Порог тишины: сколько циклов подряд нет аудио, прежде чем остановить запись.
 ; При PollInterval=2 и SilenceThreshold=3 — запись остановится через ~6 сек тишины.
 SilenceThreshold=3
+
+; Порог старта: сколько циклов подряд РЕАЛЬНЫЙ звук должен быть активен,
+; прежде чем начать запись. Защищает от ложных срабатываний на уведомления.
+; При PollInterval=2 и StartThreshold=2 — запись начнётся через ~4 сек непрерывного звука.
+; Увеличьте до 3-4 если уведомления всё ещё вызывают запись.
+StartThreshold=2
 
 [Processes]
 ; Список процессов для мониторинга (через запятую)
