--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 ; ============================================================
 ; RDP Call Recorder Agent — Конфигурация
-; Версия: 2.4
+; Версия: 2.5
 ; ============================================================
 ; Этот файл должен лежать рядом с RDPCallRecorder.exe
 ; Все параметры имеют значения по умолчанию.
@@ -48,7 +48,7 @@ HideConsole=true
 
 ; Мьютекс — один экземпляр на RDP-сессию
 UseMutex=true
-MutexName=Global\RDPCallRecorderAgentMutex
+MutexName=Local\RDPCallRecorderAgentMutex
 
 ; Приоритет процесса (BelowNormal — минимальная нагрузка)
 ProcessPriority=BelowNormal
