--- a/config.ini
+++ b/config.ini
@@ -39,7 +39,7 @@ TargetProcesses=WhatsApp.exe,Telegram.exe,Viber.exe
 
 [Logging]
 EnableLogging=true
-LogLevel=INFO
+LogLevel=DEBUG
 MaxLogSizeMB=10
 
 [Advanced]
