feat: добавил охуенное автообновление через GitHub Releases API — агент сам проверяет новые версии каждые 6 часов, скачивает Setup.exe и ставит /S silent. В трее кнопка Check for updates. Больше не надо бегать по серверам с установщиком, блять

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(RDPCallRecorder VERSION 2.5.0 LANGUAGES CXX)
+project(RDPCallRecorder VERSION 2.6.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -78,6 +78,7 @@ target_link_libraries(RDPCallRecorder PRIVATE
     Gdi32.lib
     Advapi32.lib
     Secur32.lib
+    Winhttp.lib
 )
 
 # =============================================================
