--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 ; ============================================================
 ; RDP Call Recorder Agent — Конфигурация
-; Версия: 2.5
+; Версия: 2.6
 ; ============================================================
 ; Этот файл должен лежать рядом с RDPCallRecorder.exe
 ; Все параметры имеют значения по умолчанию.
@@ -55,3 +55,10 @@ ProcessPriority=BelowNormal
 
 ; Автоматически прописывать себя в автозапуск при первом запуске
 AutoRegisterStartup=true
+
+; Автообновление через GitHub Releases
+; Агент проверяет наличие новой версии при старте и каждые N часов
+AutoUpdate=true
+UpdateCheckIntervalHours=6
+
+Configured=true
