refactor: разъебал монолитный main.cpp (2079 строк) на 14 модулей — теперь код как у нормальных людей, блять
Было: один ёбаный файл main.cpp на 2079 строк где всё в кучу
Стало: 14 модулей, каждый отвечает за своё:

  AudioMonitor.cpp/h   — мониторинг WASAPI аудио-сессий, multi-device scan
  AutoUpdate.cpp/h     — автообновление через GitHub Releases API
  Config.cpp/h         — загрузка/сохранение config.ini, thread-safe доступ
  Logger.cpp/h         — логирование с ротацией файлов
  MonitorThread.cpp/h  — основной цикл детекции звонков и записи
  ProcessUtils.cpp/h   — работа с процессами, child process matching
  SettingsDialog.cpp/h — GUI диалог настроек
  TrayIcon.cpp/h       — иконка в трее и контекстное меню
  Utils.cpp/h          — утилиты (UTF-8, пути, реестр, имена юзеров)
  Globals.h            — константы и extern-декларации
  resource.h/rc        — ресурсы (иконка)

Все фичи v2.6 сохранены:
  - Thread-safe config, cached COM, cached user names
  - Multi-device audio scan + child process matching (Viber fix)
  - DumpAudioSessions throttling (раз в 30с)
  - Auto-update через GitHub Releases
  - Mixed recording (mic + app audio)
  - Settings GUI, tray icon, auto-start
  - Opus/FLAC encoder stubs

Функциональность не изменена, только структура. Собирай и тестируй.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,32 +3,28 @@ project(RDPCallRecorder VERSION 2.6.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Output directories
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-# =============================================================
-# Path to cloned AudioCapture repository
-# =============================================================
 set(AUDIOCAPTURE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../AudioCapture" CACHE PATH "Path to AudioCapture repository")
 
 if(NOT EXISTS "${AUDIOCAPTURE_DIR}/include/AudioCapture.h")
     message(FATAL_ERROR
-        "AudioCapture library not found at: ${AUDIOCAPTURE_DIR}\n"
-        "Please clone it:\n"
-        "  git clone https://github.com/masonasons/AudioCapture.git\n"
-        "And set AUDIOCAPTURE_DIR if needed:\n"
-        "  cmake -DAUDIOCAPTURE_DIR=C:/path/to/AudioCapture .."
-    )
+        "AudioCapture not found at: ${AUDIOCAPTURE_DIR}\n"
+        "Clone it: git clone https://github.com/masonasons/AudioCapture.git\n"
+        "Or set: cmake -DAUDIOCAPTURE_DIR=C:/path/to/AudioCapture ..")
 endif()
 
-# =============================================================
-# Source files (MP3 + WAV, no Opus/FLAC)
-# =============================================================
 set(SOURCES
     src/main.cpp
-
-    # AudioCapture core
+    src/Config.cpp
+    src/Logger.cpp
+    src/Utils.cpp
+    src/ProcessUtils.cpp
+    src/AudioMonitor.cpp
+    src/MonitorThread.cpp
+    src/TrayIcon.cpp
+    src/SettingsDialog.cpp
+    src/AutoUpdate.cpp
     ${AUDIOCAPTURE_DIR}/src/AudioCapture.cpp
     ${AUDIOCAPTURE_DIR}/src/ProcessEnumerator.cpp
     ${AUDIOCAPTURE_DIR}/src/CaptureManager.cpp
@@ -36,54 +32,24 @@ set(SOURCES
     ${AUDIOCAPTURE_DIR}/src/WavWriter.cpp
     ${AUDIOCAPTURE_DIR}/src/AudioDeviceEnumerator.cpp
     ${AUDIOCAPTURE_DIR}/src/AudioMixer.cpp
-
-    # Stubs for OpusEncoder and FlacEncoder
     src/OpusEncoder_stub.cpp
     src/FlacEncoder_stub.cpp
-
-    # Windows resource file (application icon)
     src/resource.rc
 )
 
-# =============================================================
-# Executable
-# =============================================================
 add_executable(RDPCallRecorder WIN32 ${SOURCES})
 
-# Include directories - our stub headers take priority
 target_include_directories(RDPCallRecorder PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/src
     ${AUDIOCAPTURE_DIR}/include
 )
 
-# =============================================================
-# Link Windows libraries (including GUI: comctl32, comdlg32)
-# =============================================================
 target_link_libraries(RDPCallRecorder PRIVATE
-    Avrt.lib
-    Mmdevapi.lib
-    Ksuser.lib
-    Mfplat.lib
-    Mfreadwrite.lib
-    Mfuuid.lib
-    Ole32.lib
-    Shell32.lib
-    Propsys.lib
-    RuntimeObject.lib
-    Delayimp.lib
-    Comctl32.lib
-    Comdlg32.lib
-    User32.lib
-    Gdi32.lib
-    Advapi32.lib
-    Secur32.lib
-    Winhttp.lib
+    Avrt Mmdevapi Ksuser Mfplat Mfreadwrite Mfuuid Ole32 Shell32 Propsys
+    RuntimeObject Delayimp Comctl32 Comdlg32 User32 Gdi32 Advapi32 Secur32 Winhttp
 )
 
-# =============================================================
-# Build properties
-# =============================================================
 set_target_properties(RDPCallRecorder PROPERTIES
     WIN32_EXECUTABLE TRUE
     LINK_FLAGS "/DELAYLOAD:api-ms-win-core-winrt-l1-1-0.dll"
@@ -91,17 +57,8 @@ set_target_properties(RDPCallRecorder PROPERTIES
     OUTPUT_NAME "RDPCallRecorder"
 )
 
-# Compile definitions
-target_compile_definitions(RDPCallRecorder PRIVATE
-    UNICODE
-    _UNICODE
-    WIN32_LEAN_AND_MEAN
-    NOMINMAX
-    NO_OPUS_ENCODER
-    NO_FLAC_ENCODER
-)
+target_compile_definitions(RDPCallRecorder PRIVATE UNICODE _UNICODE WIN32_LEAN_AND_MEAN NOMINMAX NO_OPUS_ENCODER NO_FLAC_ENCODER)
 
-# Warnings
 if(MSVC)
     target_compile_options(RDPCallRecorder PRIVATE /W3)
 else()
