--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(RDPCallRecorder VERSION 2.6.0 LANGUAGES CXX)
+project(RDPCallRecorder VERSION 2.6.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -24,6 +24,7 @@ set(SOURCES
     src/MonitorThread.cpp
     src/TrayIcon.cpp
     src/SettingsDialog.cpp
+    src/MainPanel.cpp
     src/AutoUpdate.cpp
     ${AUDIOCAPTURE_DIR}/src/AudioCapture.cpp
     ${AUDIOCAPTURE_DIR}/src/ProcessEnumerator.cpp
