--- a/config.ini
+++ b/config.ini
@@ -33,6 +33,24 @@ SilenceThreshold=3
 ; Увеличьте до 3-4 если уведомления всё ещё вызывают запись.
 StartThreshold=2
 
+; === Telegram-специфичные настройки ===
+; Telegram не закрывает аудиосессию после звонка — она остаётся активной
+; с микро-пиками (0.001-0.02). Обычная детекция тишины не срабатывает.
+; Для Telegram используется скользящее среднее пика за последние N циклов.
+
+; Порог среднего пика для Telegram: если средний пик ниже этого значения,
+; считается тишиной. По умолчанию 0.03 (3%).
+TelegramSilencePeakThreshold=0.03
+
+; Размер окна скользящего среднего (в циклах опроса).
+; При PollInterval=2 и TelegramPeakHistorySize=5 — усреднение за 10 секунд.
+TelegramPeakHistorySize=5
+
+; Сколько циклов подряд средний пик должен быть ниже порога,
+; чтобы остановить запись Telegram.
+; При PollInterval=2 и TelegramSilenceCycles=5 — запись остановится через ~10 сек.
+TelegramSilenceCycles=5
+
 [Processes]
 ; Список процессов для мониторинга (через запятую)
 TargetProcesses=WhatsApp.exe,Telegram.exe,Viber.exe
