--- a/config.ini
+++ b/config.ini
@@ -24,8 +24,15 @@ MP3Bitrate=128000
 PollInterval=2
 
 ; Порог тишины: сколько циклов подряд нет аудио, прежде чем остановить запись.
-; При PollInterval=2 и SilenceThreshold=3 — запись остановится через ~6 сек тишины.
-SilenceThreshold=3
+; При PollInterval=2 и SilenceThreshold=15 — запись остановится через ~30 сек тишины.
+; Раньше было 3 (6 сек) — слишком мало, паузы в разговоре разрезали запись на обрывки.
+SilenceThreshold=15
+
+; Минимальная длительность записи (секунды).
+; Первые N секунд после старта записи — тишина НЕ останавливает запись.
+; Это предотвращает обрывки в начале звонка (гудки, ожидание ответа).
+; По умолчанию 60 секунд.
+MinRecordingSeconds=60
 
 ; Порог старта: сколько циклов подряд РЕАЛЬНЫЙ звук должен быть активен,
 ; прежде чем начать запись. Защищает от ложных срабатываний на уведомления.
@@ -34,26 +41,36 @@ SilenceThreshold=3
 StartThreshold=2
 
 ; === Telegram-специфичные настройки ===
-; Telegram не закрывает аудиосессию после звонка — она остаётся активной
-; с микро-пиками (0.001-0.02). Обычная детекция тишины не срабатывает.
-; Для Telegram используется скользящее среднее пика за последние N циклов.
+;
+; Telegram Desktop детектируется по ОКНУ ЗВОНКА:
+; Во время звонка Telegram создаёт отдельное окно с именем контакта.
+; Главное окно Telegram имеет заголовок "Telegram" или "Telegram (N)".
+; Если есть окно с другим заголовком — значит идёт звонок.
+;
+; Это полностью отсекает:
+;   - Уведомления (звук без окна звонка)
+;   - Голосовые сообщения (прослушивание без окна звонка)
+;   - Видео/музыку в чатах
+;
+; Для СТАРТА записи: нужен аудио-пик + окно звонка Telegram.
+; Для ОСТАНОВКИ записи: окно звонка исчезло.
 
-; Порог среднего пика для Telegram: если средний пик ниже этого значения,
-; считается тишиной. По умолчанию 0.03 (3%).
-TelegramSilencePeakThreshold=0.03
+; --- Детекция остановки ---
+; Сколько циклов подряд окно звонка должно отсутствовать,
+; чтобы остановить запись. Небольшой буфер на случай мигания окна.
+; При PollInterval=2 и TelegramSilenceCycles=3 — запись остановится через ~6 сек.
+TelegramSilenceCycles=3
 
-; Размер окна скользящего среднего (в циклах опроса).
-; При PollInterval=2 и TelegramPeakHistorySize=5 — усреднение за 10 секунд.
+; --- Вспомогательные параметры (для логирования) ---
+; Размер окна скользящего среднего пика (в циклах опроса).
 TelegramPeakHistorySize=5
 
-; Сколько циклов подряд средний пик должен быть ниже порога,
-; чтобы остановить запись Telegram.
-; При PollInterval=2 и TelegramSilenceCycles=5 — запись остановится через ~10 сек.
-TelegramSilenceCycles=5
+; Порог среднего пика (используется только в логах для диагностики).
+TelegramSilencePeakThreshold=0.03
 
 [Processes]
 ; Список процессов для мониторинга (через запятую)
-TargetProcesses=WhatsApp.exe,Telegram.exe,Viber.exe
+TargetProcesses=WhatsApp.exe,WhatsApp.Root.exe,Telegram.exe,Viber.exe
 
 [Logging]
 EnableLogging=true
